<resources>
	<string name="version">0.3.0</string>
    <string name="app_name">File Quest</string>
    <string name="versioncode">030</string>
    <string-array name="effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>ZoomIn</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
    	<item>Accordion</item>
    </string-array>
    <string-array name="effects2">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>ZoomIn</item>
       	<item>RotateUp</item>
        <item>RotateDown</item>
    	<item>Accordion</item>
    </string-array>
    <string-array name="slideList">
        <item>Favorite</item>
        <item>Music </item>
        <item>Apps </item>
        <item>Images</item>
        <item>Videos</item>
        <item>Documents</item>
        <item>Archives</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="listAnims" >
          	<item>Standard</item>
        	<item>Grow</item>
        	<item>Cards</item>
        	<item>Zipper</item>
        	<item>Helix</item>
        	<item>Flip</item>
        	<item>Fly</item>
        	<item>Reverse fly</item>
        	<item>Wave</item>
        	<item>Fan</item>
        	<item>Tilt</item>        	
        	<item>Curl</item>
        	<item>Fade</item>
        	<item>Twirl</item>
        	<item>Slide in</item>
    </string-array>
    <string-array  name="graph_titles">
        <item>Bar Graph</item>
        <item>Pie Chart</item>
    </string-array>
    <string-array name="itemlockerlist">
        <item>Set master password</item>
        <item>Reset master password</item>
        <item>Unlock all locked items</item>
        <item>Lock child items also</item>
    </string-array>
	<string name="empty">No Files</string>
	<string name="New">New</string>
	<string name="overwrite">Overwrite</string>
	<string name="search_hint">Enter Text To Search</string>
	<string name="label">File Quest Text Editor</string>
	<string name="failtowrite">Unable To Save File</string>
	<string name="invalid">Selected file is invalid</string>
	<string name="readerror">Unable To Read The File</string>
	<string name="xerror">Unknown Error Encountered</string>
	<string name="saved">File saved successfully</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="openwith">Open with</string>
	<string name="wait">Please wait while loading file</string>
	<string name="sd">SD Card</string>
	<string name="setasdefault">Set as default</string>
	<string name="internalstorage">Internal Phone Storage</string>
	<string name="modified">Modified on</string>
	<string name="type">Type</string>
	<string name="longClick">Select an action</string>
	<string name="use">Use</string>
	<string name="noApp">No such application is found</string>
	<string name="selectFirst">First select an application</string>
	<string name="always">Always</string>
	<string name="once">Once</string>
	<string name="nohome">Home directory not found</string>
	<string name="nohomeerror">It seems that the defined path for home directory deosnot exists,setting home directory to default location /sdcard,you can change the default location</string>
	<string name="noapperror">Currently there is no app installed on this device that can handle this type of file</string>
	<string name="noactivity">This app donot have activity to launch</string>
	<string name="failtodeletebackup">Unable to delete the backup</string>
	<string name="senderror">An error encountered while sending files,try later</string>
	<string name="unabletosend">Unable to send right now try later</string>
	<string name="someapps">First select some apps</string>
	<string name="enablefirstforappstore">First enable multi select mode for your app store then you can send multiple apps</string>
	<string name="serviceUnavaila">This service is unavailable for system files</string>
	<string name="pasteNotAllowed">Paste not allowed here</string>
	<string name="fsaved">File have been saved</string>
	<string name="saveOnExit">Save file before quiting</string>
	<string name="saveMesage">Do you want to save the file before quiting?</string>
	<string name="selectFiles">First select some files</string>
	<string name="failedToRetrieve">Failed to retrieve file properties</string>
	<string name="p_String">Please wait while loading list</string>
	<string name="cleargesturedata">Clear gesture data</string>
	<string name="gesturedatacleared">All gesture data has been cleared</string>
	<string name="zipexception">Corrupt or protected archive,failed to open</string>
	<string name="fileextracted">Files extracted successfully</string>
	<string name="preparing">Preparing,please wait</string>
	<string name="extaborted">Extraction was interrupted</string>
	<string name="errorinext">There were few errors while extracting</string>
	<string name="cannotexthere">Cannot extract files here</string>
	<string name="search">Search</string>
	<string name="multi">Multi-sel</string>
	<string name="copybottom">Copy</string>
	<string name="multiback">Multi-bac</string>
	<string name="sysapp">Sys-app</string>
	<string name="userapp">User-app</string>
	<string name="allapp">All-app</string>
	<string name="animation">Animation Effects</string>
	<string name="panelanim">Panel Animation</string>
	<string name="listanim">Listview Animation</string>
	<string name="operationnotsupported">Operation not allowed</string>
	<string name="deflated">Deflated</string>
	<string name="stored">Stored</string>
	<string name="compmethod">Compression method</string>
	<string name="preparingtoshare">Preparing to share</string>
	<string name="cannotsendfolder">Cannot send a folder</string>
	<string name="http">Server</string>
	<string name="starthttp">Connect to Http Server</string>
	<string name="startftp">Connect to Ftp Server</string>
	<string name="none">None</string>
	<string name="manage">Manage Storage</string>
	<string name="deleteall">Delete all files</string>
	<string name="zip7">7 Zip</string>
	<string name="tar">Tar</string>
	<string name="set">Set</string>
	<string name="setmasterpassword">Set master password</string>
	<string name="locker">Item locker</string>
	<string name="copyingfile">Copying file</string>
	<string name="movealltoonelocation">Move all to one location</string>
	<string name="compressallfiles">Compress all files</string>
	<string name="confirmdeletion">Are you sure to delete the files of folder :- All the files in this category will be deleted permanently....</string>
	<string name="cantextractfromrar">Can\'t extract files from rar archives....</string>
	<string name="choosealocation">Choose a location</string>
	<string name="enterPassword">Enter password</string>
	<string name="confirmPassword">Confirm password</string>
	<string name="password">Password</string>
	<string name="minimumpasswordlength">Minimum password length should be 4</string>
	<string name="passworddidnotmatch">Password didn\'t match</string>
	<string name="itemlocked">One item locked</string>
	<string name="itemunlocked">One item unlocked</string>
	<string name="entermaster">Enter master password</string>
	<string name="passwdreset">Password set successfully</string>
	<string name="lockeditemsunlocked">All locked items unlocked successfully</string>
	<string name="unabletounlock">Unable to unlock them</string>
	<string name="enternewpassword">Enter new password</string>
	<string name="resetmasterpassword">Reset master password</string>
	<string name="failedtoplay">Failed to play the music</string>
	<string name="notavailable">Not available</string>
	<string name="archivefiles">Archive Files</string>
	<string name="favorite">Favorite</string>
	<string name="favadded">One item added to list</string>
	<string name="favremoved">One item removed</string>
	<string name="setpasswd">Setting password for first time....</string>
	<string name="arcpasswd">Archiving the locked item....</string>
	<string name="delpasswd">Deleting the locked item....</string>
	<string name="copypasswd">Copying the locked item....</string>
	<string name="openpasswd">Opening the locked item....</string>
	<string name="pasteppasswd">Pasting into locked item....</string>
	<string name="renamepasswd">Renaming the locked item....</string>
	<string name="sendpasswd">Sending the locked item....</string>
	<string name="unlockpasswd">Unlocking the locked items....</string>
	<string name="changepasswd">Changing the password....</string>
	<string name="homepasswd">Opening the home item....</string>
	<string name="totalfolder">Folders :- %d Folders</string>
	<string name="totalfiles">Files :- %d Files</string>
	<string name="deletingfile">DELETING FILE :- </string>
	<string name="allfavdeleted">All favorite items removed from list</string>
	<string name="inter">INTERFACE</string>
	<string name="folderoptions">FOLDER OPTIONS</string>
	<string name="about">ABOUT</string>
	<string name="graph_stats">Graphical Stats</string>
	<string name="cloud_networks">Cloud Networks</string>
	<string name="connect_server">Connect to Server</string>
	<string name="locked_items">Locked Items</string>
	<string name="coming_soon">This feature is arriving soon....</string>
	<string name="update_check">Check for update</string>
	<string name="nointernet">No internet connectivity....</string>
	<string name="checking_update">Wait while checking for update</string>
	<string name="failed_to_check_for_update">Failed to check for update</string>
	<string name="update_avail">New update of FILE QUEST is available</string>
	<string name="delete_frm_ext_sd">Beginning from Android 4.4 Kitkat,it may not possible to remove or rename files on external storage due to change of Android security policy.</string>
	<string name="delete_frm_ext_sd_title">Cannot delete from external storage!</string>
	<string name="dis_next_restart">Disable lock till next restart</string>
	<string name="unlock_all">Unlock all locked items</string>
	<string name="lock_disabled">Lock disabled till next restart</string>
	<string name="no_locked_items">No items are locked</string>
	<string name="mediafire">Mediafire</string>
	<string name="sugarsync">Sugarsync</string>
	<string name="copy_cld">Copy</string>
	<string name="no_file_available">No files available</string>
	<string name="faile_to_rename">Failed to rename file</string>
	<string name="thumb_loading">Thumbnail Loading....</string>
	<string name="load_app_thumb">Load app thumb</string>
    <string name="abtme">About me and my app</string>
    <string name="copyingto">COPYING TO :-</string>
    <string name="copyingfrom">COPYING FROM :-</string>
    <string name="time">Time left</string>
    <string name="cancel">Cancel</string>
    <string name="appsizebytes">SIZE :- %.2f Bytes</string>
    <string name="fqeditor">File Quest Text Editor</string>
    <string name="developer">Developer</string>
    <string name="copyright">Copyright 2014</string>
    <string name="anurag">ANURAG</string>
    <string name="version2">Version</string>
    <string name="released">Released Status</string>
    <string name="beta">Experimental-Beta</string>
    <string name="license">License</string>
    <string name="apache">Apache v2.0</string>
    <string name="contact">Contact</string>
    <string name="email">anurag.dev1512@gmail.com</string>
    <string name="currentfile">CURRENT FILE :-</string>
    <string name="size">SIZE :- ?</string>
    <string name="archiveoperation">Archive Operation</string>
    <string name="extract">Extract</string>
    <string name="extractingto">EXTRACTING TO :-</string>
    <string name="extractingfrom">EXTRACTING FROM :-</string>
    <string name="extractingfile">EXTRACTING FILE :-</string>
    <string name="extstatusbytes">Status :- %.2f Bytes extracted</string>
</resources>