<!-- 
  Copyright(c) 2013 DRAWNZER.ORG PROJECTS -> ANURAG
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
       
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
                              
                              anurag.dev1512@gmail.com
 
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    
    android:layout_gravity="center"
    android:paddingTop="10dp"
    >
    
    <LinearLayout 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView 
            android:id="@+id/headerImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            />
        <TextView 
            android:paddingLeft="15dp"
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyingfile"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <LinearLayout 
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
   		<ImageView 
   		android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/dialog_border" 
        android:layout_width="fill_parent" 
        android:layout_height="3.0dip" 
         />     
    </LinearLayout>
    
   
    <TextView 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
        android:layout_weight="0.3" 
        android:singleLine="false"
        android:paddingTop="8dp"
        android:id="@+id/copyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/copyingto"/>
    <TextView 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
        android:layout_weight="0.3" 
        android:singleLine="false"
        android:paddingTop="8dp"
        android:id="@+id/copyFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/copyingfrom"/>
    <TextView 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
        android:layout_weight="0.3" 
        android:singleLine="true"
        android:paddingTop="8dp"
        android:id="@+id/copyFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/size"/>
    <TextView 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
       android:layout_weight="0.3" 
        android:singleLine="true"
        android:paddingTop="8dp"
        android:id="@+id/currentFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/currentfile"/>
    <LinearLayout 
        android:paddingLeft="20dp"
    	android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_weight="0.5"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        
        <TextView 
            android:layout_gravity="center_vertical"
           	android:paddingLeft="20dp"
        	android:id="@+id/timeLeft"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
        	android:text="@string/time"/>
    </LinearLayout>
    
     <LinearLayout 
        android:paddingLeft="10dp"
        android:paddingRight="10dp" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
   	<ProgressBar
   	    	android:visibility="gone"
   	    	android:padding="5dp"
            android:id="@+id/download_Progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
              android:progressDrawable="@drawable/progress_horizontal_holo_dark" />     
        
    </LinearLayout>
    
    <LinearLayout 
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:progressDrawable="@drawable/progress_horizontal_holo_dark" />
    </LinearLayout>
    
     <LinearLayout 
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
   		<ImageView 
   		android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/dialog_border" 
        android:layout_width="fill_parent" 
        android:layout_height="3.0dip" 
         />     
    </LinearLayout>
    
     <LinearLayout 
         android:padding="5dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
         android:gravity="center">
        <Button 
            android:textColor="@android:color/white"
            android:background="@drawable/button_click"
            android:gravity="center"
        	android:layout_gravity="center"
        	android:layout_width="fill_parent"
       		android:layout_height="40dp"
        	android:id="@+id/copyCancel"
       		android:text="@string/cancel"
       		android:layout_weight="1"
       		android:textStyle="bold"/>
        
        <Button 
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/button_click"
            android:gravity="center"
        	android:layout_gravity="center"
        	android:layout_width="fill_parent"
       		android:layout_height="40dp"
        	android:id="@+id/copyOk"
       		android:text="@string/overwrite"
       		android:textStyle="bold"/>
    </LinearLayout>
    
    

</LinearLayout>