<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >
    
    <TextView 
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/fqeditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout 
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText 
            android:gravity="center"
            android:clickable="false"
            android:layout_weight="1"
            android:id="@+id/textSearch"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/edit_text_focused_black"
            android:hint="@string/search_hint"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"/>
       
        
    </LinearLayout>
    
    
    
    <!-- SCROLL VIEW-->
    
    
   
   
    
    <ScrollView 
        android:paddingTop="2dp"
        android:fillViewport="true"
        android:fadingEdge="none"
        android:background="@android:color/background_dark"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    	<LinearLayout 
    	    android:gravity="center"
    	    android:orientation="vertical"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent">
    	    
    	    <EditText 
    	    android:visibility="gone"
    	    class="org.anurag.text.editor$CustomText"
    	    android:fadingEdge="none"
    	    android:gravity="top"
    	    android:autoText="false"
    	    android:capitalize="none"
    	    android:background="@color/transparent"
    	    android:scrollbars="vertical"
    	    android:layout_width="fill_parent"
    	    android:id="@+id/note"
    	    android:textColor="@android:color/darker_gray"
    	    android:layout_height="fill_parent"
    	    />
        <ProgressBar 
            android:id="@+id/editorBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    	 <TextView 
    	     android:paddingTop="10dp"
    	     android:id="@+id/editorMesage"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:textStyle="bold"
    	     android:text="@string/wait"/>   
    	</LinearLayout>
    </ScrollView>
    
    

</LinearLayout>